--- a/Test/SmartLock.Services.UnitTest/SmartLock.Services.UnitTest.csproj
+++ b/Test/SmartLock.Services.UnitTest/SmartLock.Services.UnitTest.csproj
@@ -17,7 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Services\SmartLock.Services.AccessRight\SmartLock.Services.AccessRight.API.csproj" />
     <ProjectReference Include="..\..\src\Services\SmartLock.Services.AuditLogs\SmartLock.Services.AuditLogs.API.csproj" />
+    <ProjectReference Include="..\..\src\Services\SmartLock.Services.Locking.API\SmartLock.Services.Locking.API.csproj" />
+    <ProjectReference Include="..\..\src\Services\SmartLock.Services.Managment.API\SmartLock.Services.Managment.API.csproj" />
   </ItemGroup>
 
   <ItemGroup>
