Add healthCheck to Locking API Service

--- a/src/Services/SmartLock.Services.Locking.API/SmartLock.Services.Locking.API.csproj
+++ b/src/Services/SmartLock.Services.Locking.API/SmartLock.Services.Locking.API.csproj
@@ -21,4 +21,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Infrastructure\Microsoft.AspNetCore.HealthChecks\Microsoft.AspNetCore.HealthChecks.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\Microsoft.Extensions.HealthChecks\Microsoft.Extensions.HealthChecks.csproj" />
+  </ItemGroup>
+
 </Project>
